@@ -1,5 +1,7 @@
 2018-07-04  Carl Hetherington  <cth@carlh.net>
 
+	* Label audio content with its DCP channel mapping in the timeline (#1279).
+
 	* Add scrolling and zoom to the timeline (#1279, #1320).
 
 2018-07-01  Carl Hetherington  <cth@carlh.net>
